tests/baselines/reference/emitArrowFunctionWhenUsingArguments15_ES6(alwaysstrict=true).errors.txt
emitArrowFunctionWhenUsingArguments15_ES6.ts(2,9): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments15_ES6.ts(4,15): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments15_ES6.ts (2 errors) ====
    function f() {
        var arguments = "hello";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        if (Math.random()) {
            const arguments = 100;
                  ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
            return () => arguments;
        }
    }